--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -14,6 +14,7 @@
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutColonne.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireModificationColonne.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/utilisateurs.js') }}" defer></script>
+    <script type="module" src="{{ asset('../ressources/javaScript/formulaireModificationTableau.js') }}" defer></script>
 
 
 </head>
