--- a/ressources/css/navstyle.css
+++ b/ressources/css/navstyle.css
@@ -52,27 +52,42 @@ footer p {
 /* Bootstrap alerts */
 /* https://getbootstrap.com/docs/3.4/components/#alerts */
 
-.alert {
-    animation:flashes-animation 5s 1;
-    -webkit-animation:flashes-animation 5s 1;
-    animation-fill-mode: forwards;
-    animation-delay:3s;
-    -webkit-animation-delay:1s;
-    -webkit-animation-fill-mode: forwards;
-}
-
-@-webkit-keyframes flashes-animation {
-    0%   {opacity: 1;position: inherit;}
-    50% {opacity: 1;position: inherit;}
-    90% {opacity: 0;position: inherit;}
-    100% {opacity: 0;position: absolute;}
-}
 
 .alert {
-    padding: 15px;
-    margin-bottom: 20px;
+    font-weight: normal;
+    padding: 5px;
     border: 1px solid transparent;
-    border-radius: 4px;
+    border-radius: 10px;
+    min-width: 250px;
+    max-width: 400px;
+    min-height: 10px;
+    max-height: 250px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    z-index: 1;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: top 1s ease-in-out;
+}
+
+.alert:hover {
+    cursor: pointer;
+}
+
+.alert > h5 {
+    font-size: 1em;
+    margin-left: 5%;
+    line-height: 1em;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.alert > img {
+    width: 35px;
 }
 
 .alert-success {
@@ -98,6 +113,7 @@ footer p {
     background-color: #f2dede;
     border-color: #ebccd1;
 }
+
 
 /* https://philipwalton.github.io/solved-by-flexbox/demos/input-add-ons/ */
 .InputAddOn {
