--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ asset("../ressources/css/trellostyle.css") }}">  <!--TODO into asset-->
     <link rel="stylesheet" href="{{ asset("../ressources/css/tableaux.css") }}">  <!--TODO into asset-->
 
+    <script type="text/javascript" src="{{ asset('../ressources/javaScript/messagesFlash.js') }}"></script>
     <script type="text/javascript" src="{{ asset('../ressources/javaScript/tableaux.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutCarte.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutParticipant.js') }}" defer></script>
@@ -16,10 +17,27 @@
     <script type="module" src="{{ asset('../ressources/javaScript/utilisateurs.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireModificationTableau.js') }}" defer></script>
 
+    <script>
+        window.danger = "{{ asset('../ressources/img/danger.png') }}";
+        window.success = "{{ asset('../ressources/img/success.png') }}";
+        window.warning = "{{ asset('../ressources/img/warning.png') }}";
+        window.info = "{{ asset('../ressources/img/info.png') }}";
+    </script>
+
 
 </head>
 
 <body>
+
+<script>afficherMessageFlash('Salut ! ', 'info');</script>
+
+{% if app.request.cookies.get('flash_message') is not null and app.request.cookies.get('flash_message_type') is not null %}
+    <script>afficherMessageFlash({{ app.request.cookies.get('flash_message') }}, {{ app.request.cookies.get('flash_message_type') }})</script>
+    {{ app.request.cookies.remove('flash_message') }}
+    {{ app.request.cookies.remove('flash_message_type') }}
+    {% do app.request.cookies.set('flash_message', '', { expires: "now"|date_modify("-1 hour") }) %}
+    {% do app.request.cookies.set('flash_message_type', '', { expires: "now"|date_modify("-1 hour") }) %}
+{% endif %}
 
 <header>
     <nav>
@@ -29,31 +47,36 @@
             </li>
             {% if connexionUtilisateur.loginUtilisateurConnecte is null %}
 
-            <li>
-                <a href="{{route("afficherFormulaireConnexion")}}">  <!--TODO into asset-->
-                    Connexion <img alt="login" src="{{ asset("../ressources/img/enter.png") }}" >
-                </a>
-            </li>
-            <li>
-                <a href="{{ route('afficherFormulaireCreation') }}">  <!--TODO into route-->
-                    Inscription <img alt="S'inscrire" title="S'inscrire" src="{{ asset("../ressources/img/add-user.png") }}" >  <!--TODO into asset-->
-                </a>
-            </li>
+                <li>
+                    <a href="{{ route("afficherFormulaireConnexion") }}">  <!--TODO into asset-->
+                        Connexion <img alt="login" src="{{ asset("../ressources/img/enter.png") }}">
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ route('afficherFormulaireCreation') }}">  <!--TODO into route-->
+                        Inscription <img alt="S'inscrire" title="S'inscrire"
+                                         src="{{ asset("../ressources/img/add-user.png") }}">  <!--TODO into asset-->
+                    </a>
+                </li>
             {% else %}
 
-            <li>
-                <a href="{{ route('afficherListeMesTableaux')}}">Mes tableaux</a>
-            </li>
-            <li>
-                <a href="{{ route('afficherDetail',{"login" : connexionUtilisateur.loginUtilisateurConnecte}) }}">  <!--TODO into route-->
-                    Mon compte (<span>{{ connexionUtilisateur.loginUtilisateurConnecte }}</span>) <img alt="logout" src="{{ asset("../ressources/img/user.png") }}">  <!--TODO into asset-->
-                </a>
-            </li>
-            <li>
-                <a href="{{ route('deconnexion') }}"> <!--TODO into route-->
-                    Déconnexion <img alt="logout" src="{{ asset("../ressources/img/logout.png") }}"> <!--TODO into asset-->
-                </a>
-            </li>
+                <li>
+                    <a href="{{ route('afficherListeMesTableaux') }}">Mes tableaux</a>
+                </li>
+                <li>
+                    <a href="{{ route('afficherDetail',{"login" : connexionUtilisateur.loginUtilisateurConnecte}) }}">
+                        <!--TODO into route-->
+                        Mon compte (<span>{{ connexionUtilisateur.loginUtilisateurConnecte }}</span>) <img alt="logout"
+                                                                                                           src="{{ asset("../ressources/img/user.png") }}">
+                        <!--TODO into asset-->
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ route('deconnexion') }}"> <!--TODO into route-->
+                        Déconnexion <img alt="logout" src="{{ asset("../ressources/img/logout.png") }}">
+                        <!--TODO into asset-->
+                    </a>
+                </li>
             {% endif %}
             <?php %} ?>
         </ul>
@@ -62,7 +85,7 @@
 
         {% for type in ['success','info', 'warning', 'danger'] %}
             {% for messageFlash in messagesFlash.lireMessages(type) %}
-            <div class="alert alert-{{ type }}">{{ messageFlash }}</div>
+                <div class="alert alert-{{ type }}">{{ messageFlash }}</div>
             {% endfor %}
         {% endfor %}
     </div>
