--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -14,6 +14,7 @@
     <script>
         let bulletsImageUrl = "{{ asset('../ressources/img/bullets.png') }}";
         let plusImageUrl = "{{ asset('../ressources/img/plus.png') }}";
+        let inviterImageUrl = "{{ asset('../ressources/img/inviter.png') }}";
     </script>
 
     {% if tableau.utilisateur.login == connexionUtilisateur.loginUtilisateurConnecte %}
