--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -37,8 +37,8 @@
 
         <div class="infos">
             <div class="titre">
-                <h3>{{ tableau.titreTableau|capitalize }}</h3>
-                <img src="{{ asset('../ressources/img/bullets.png') }}" alt="" class="bullets">
+                <h3 class="titreTableau">{{ tableau.titreTableau|capitalize }}</h3>
+                <img src="{{ asset('../ressources/img/bullets.png') }}" alt="" class="bullets" data-onclick="formulaireModificationTableau.afficherFormulaireModificationTableau">
             </div>
             <div class="allUsers">
                 <h4>Collaborateurs :</h4>
@@ -204,6 +204,21 @@
                    placeholder="Entrez le nouveau titre">
         </div>
         <div class="boutonModification" data-onclick="formulaireModificationColonne.modifierColonne">Modifier</div>
+    </div>
+
+
+    <div class="formulaireModificationTableau">
+        <div class="wrap">
+            <h2>Modification du tableau</h2>
+            <img class="closeColumn" src="{{ asset('../ressources/img/close.png') }}" alt="">
+        </div>
+        <div class="content">
+            <h4>Nouveau titre :</h4>
+            <input maxlength="30" required type="text"
+                   class="inputModificationTableau" data-reactiveInput="formulaireModificationTableau.titreTableau"
+                   placeholder="Entrez le nouveau titre">
+        </div>
+        <div class="boutonModification" data-onclick="formulaireModificationTableau.modifierTableau({{ tableau.idTableau }})">Modifier</div>
     </div>
 
 
