feat : page d'accueil + responsive OK

--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ asset("../ressources/css/navstyle.css") }}"> <!--TODO into asset-->
     <link rel="stylesheet" href="{{ asset("../ressources/css/trellostyle.css") }}">  <!--TODO into asset-->
     <link rel="stylesheet" href="{{ asset("../ressources/css/tableaux.css") }}">  <!--TODO into asset-->
+    <link rel="stylesheet" href="{{ asset("../ressources/css/accueilStyle.css") }}">  <!--TODO into asset-->
 
     <script type="text/javascript" src="{{ asset('../ressources/javaScript/messagesFlash.js') }}"></script>
     <script type="text/javascript" src="{{ asset('../ressources/javaScript/tableaux.js') }}" defer></script>
