fix : correction des escape

--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ asset("../ressources/css/accueilStyle.css") }}">  <!--TODO into asset-->
 
     <script type="text/javascript" src="{{ asset('../ressources/javaScript/messagesFlash.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('../ressources/javaScript/escape.js') }}"></script>
     <script type="text/javascript" src="{{ asset('../ressources/javaScript/tableaux.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutCarte.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutParticipant.js') }}" defer></script>
