fix : correction du bug des colonnes fantomes (ouuuuhhhhhhhhhhh)

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -211,7 +211,7 @@
     <div class="formulaireModificationTableau">
         <div class="wrap">
             <h2>Modification du tableau</h2>
-            <img class="closeColumn" src="{{ asset('../ressources/img/close.png') }}" alt="">
+            <img class="closeTable" src="{{ asset('../ressources/img/close.png') }}" alt="">
         </div>
         <div class="content">
             <h4>Nouveau titre :</h4>
