feat : modification du mot de passe d'un compte connecté

--- a/src/vue/utilisateur/resultatResetCompte.html.twig
+++ b/src/vue/utilisateur/resultatResetCompte.html.twig
@@ -8,6 +8,12 @@
         <form method="post" action="{{ route("validerMDP",{"login": login}) }}">
             <fieldset>
                 <h3>Réinitialisation du Mot de Passe</h3>
+                {% if connexionUtilisateur.loginUtilisateurConnecte is not null %}
+                <p >
+                    <label  for="mdpAncien_id">Ancien mot de passe&#42;</label>
+                    <input  type="password" value="" placeholder="" name="mdpAncien" id="mdpAncien_id" required>
+                </p>
+                {% endif %}
                 <p>
                     <label for="mdp_id">Mot de passe&#42;</label>
                     <label for="mdp_id"><strong>6 à 50 caractères, au moins une minusle, une majuscule et un caractère
