--- a/src/vue/utilisateur/formulaireMiseAJour.html.twig
+++ b/src/vue/utilisateur/formulaireMiseAJour.html.twig
@@ -26,7 +26,7 @@
                 </p>
 
                 <p>
-                    <input formaction="{{ route('changerMotDePasse', ) }}" type="submit" value="Changer mot de passe"/>
+                    <input formmethod="get" formaction="{{ route('changerMotDePasse', {"login" : connexionUtilisateur.loginUtilisateurConnecte}) }}" type="submit" value="Changer le mot de passe"/>
                 </p>
                 <p>
                     <input type="submit" value="Mettre à jour"/>
