--- a/src/vue/tableau/listeTableauxUtilisateur.html.twig
+++ b/src/vue/tableau/listeTableauxUtilisateur.html.twig
@@ -13,15 +13,15 @@
             <div class="ligne_tableau">
                 <div>{{ tableau.titreTableau }}</div>
                 <div>
-                    <a href="{{ route('afficherTableau', {codeTableau : tableau.codeTableau}) }}">{# TODO A MODIFIER SUREMENT #}
+                    <a href="{{ route('afficherTableau', {codeTableau : tableau.codeTableau}) }}">
                         Modifier
                     </a>
                 </div>
                 <div>
                     {% if tableau.utilisateur.login == connexionUtilisateur.loginUtilisateurConnecte %}
-                    <a href="{{ route('supprimerTableau', {idTableau : tableau.idTableau}) }}">Supprimer le tableau</a> {# TODO A MODIFIER SUREMENT #}
+                    <a href="{{ route('supprimerTableau', {idTableau : tableau.idTableau}) }}">Supprimer le tableau</a>
                     {% else %}
-                    <a href="{{ route('quitterTableau', {idTableau : tableau.idTableau}) }}">Quitter le tableau</a> {# TODO A MODIFIER SUREMENT #}
+                    <a href="{{ route('quitterTableau', {idTableau : tableau.idTableau}) }}">Quitter le tableau</a>
                     {% endif %}
                 </div>
             </div>
